Fix unit labels on transformations.  (Close #386)

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -172,7 +172,7 @@
               <input type="number" id="opensbp-transforms-rotate-x" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
-              <span class="postfix">mm</span>
+              <span class="postfix in_mm_label">&nbsp;</span>
             </div>
           </div> 
         </div>
@@ -183,7 +183,7 @@
               <input type="number" id="opensbp-transforms-rotate-y" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
-              <span class="postfix">mm</span>
+              <span class="postfix in_mm_label">&nbsp;</span>
             </div>
           </div> 
         </div>       
@@ -292,7 +292,7 @@
               <input type="number" id="opensbp-transforms-move-x" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
-              <span class="postfix">mm</span>
+              <span class="postfix in_mm_label">&nbsp;</span>
             </div>
           </div> 
         </div>
@@ -303,7 +303,7 @@
               <input type="number" id="opensbp-transforms-move-y" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
-              <span class="postfix">mm</span>
+              <span class="postfix in_mm_label">&nbsp;</span>
             </div>
           </div> 
         </div>
@@ -314,7 +314,7 @@
               <input type="number" id="opensbp-transforms-move-z" class="opensbp-input"/>
             </div>
             <div class="small-3 columns">
-              <span class="postfix">mm</span>
+              <span class="postfix in_mm_label">&nbsp;</span>
             </div>
           </div> 
         </div>
