--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -28,6 +28,7 @@
     <li class="tab-title" role="presentational" ><a href="#tabpanel3" role="tab" tabindex="0"aria-selected="false" controls="tabpanel3">Inputs</a></li>
     <li class="tab-title" role="presentational" ><a href="#tabpanel4" role="tab" tabindex="0"aria-selected="false" controls="tabpanel4">Channels</a></li>
     <li class="tab-title" role="presentational" ><a href="#tabpanel5" role="tab" tabindex="0"aria-selected="false" controls="tabpanel5">Machine</a></li>
+    <li class="tab-title" role="presentational" ><a href="#tabpanel6" role="tab" tabindex="0"aria-selected="false" controls="tabpanel6">Apps</a></li>
     </ul>
     <ul class="right">
       <li><a id="engine-version" class="engine-version" href=""></a>
@@ -1655,12 +1656,53 @@
       </fieldset>
     </div>
   </section>
+
+
+  <section role="tabpanel" aria-hidden="true" class="content" id="tabpanel6" style="padding: 0px;">
+
+<form style="display:none;" id="fileform">
+  <input type="file" id="file" multiple>
+  </form>
+  <div id="table-outer" >
+    <div id="dropzone" class="container">
+      <div class="hovershow message">Drag app here to install...</div>
+      <div class="hoverdim">
+        <table id="appmanager-table">
+          <thead>
+            <tr>
+              <th class="small-2"><!--ICON--></th>
+              <th class="small-3">Name</th>
+              <th class="small-5">Description</th>
+              <th class="small-1"></th>
+              <th class="small-1"></th>
+            </tr>
+          </thead>
+          <tbody class="row app-listing"></tbody>
+        </table>
+      </div>
+      <!--
+            <div class="modal-background"></div>
+            <div class="modal-content">
+                <h5>Are you sure you want to delete app?</h5>
+                <button class="deleteCancel">Cancel</button>
+                <button class="deleteOkay">Yes, Delete</button>
+           </div>-->
+      </div>
+  </div>
+
+</section>
+
+
+
 </div>
 <!--</form>-->
 
 </div>
   <script src="/js/libs/fabmo.js"></script>
   <script src="./js/configuration.js"></script>
+  <script src="./js/jquery.dragster.js"></script>
+  <script src="./js/app_manager.js"></script>
+  
   <script>
     var configData = null;
     var fabmo = new FabMoDashboard();
@@ -1761,6 +1803,9 @@
           });
         }
       });
+
+      setupAppManager();
+
     });
   </script>
 
