--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -6,6 +6,7 @@
   
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/foundation.min.css">
+  <link rel="stylesheet" href="./css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="/js/libs/jquery.min.js"></script>
@@ -1699,9 +1700,9 @@
 
 </div>
   <script src="/js/libs/fabmo.js"></script>
+  <script src="./js/app_manager.js"></script>
   <script src="./js/configuration.js"></script>
   <script src="./js/jquery.dragster.js"></script>
-  <script src="./js/app_manager.js"></script>
   
   <script>
     var configData = null;
