--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -117,11 +117,11 @@
               <ul class="off-canvas-list" id="util-menu-small">
                 <li><a href="#/menu" id="icon_home"><span>Home</span></a></li>
                 <li><a href="#/app/job-manager" id="icon_jobs"><span>Job Manager</span></a></li>
-                <li><a href="#/app/editor" id="icon_editor"><span>NC Editor</span></a></li>          
-                <li><a href="#/app/app-manager" id="icon_apps" ><span>Apps</span></a></li>
+                <li><a href="#/app/editor" id="icon_editor"><span>Editor</span></a></li>          
                 <li><a href="#/app/config" id="icon_settings"><span>Configuration</span></a></li>
                 <li><a href="#/app/macros" id="icon_folder"><span>Macros</span></a></li>
-                <li><a href="#" id="icon_colapse"><span>Collapse</span></a></li>
+                <li><a href="#/app/network-manager" id="icon_network"><span>Network</span></a></li>
+                <li><a href="#" id="icon_collapse"><span>Collapse</span></a></li>
               </ul>
             </div>
           </aside>
