--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -267,7 +267,7 @@
             <div id="navbar_container"></div>
             <div id="modal_container" style="display:none;"></div>
             <div id="waiting_container">
-                <svg width="25%" height="25%" viewBox="0 0 247.8 314.4">
+                <svg width="200px" height="150px" viewBox="0 0 247.8 314.4">
                     <style type="text/css">
                         .st0{fill:#DD8728;}
                     </style>
