Interim commit for revamped macro manager

--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="/css/foundation.min.css">
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/dataTables.foundation.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
@@ -30,202 +29,24 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th>Number</th>
+                        <th>#</th>
                         <th>Name</th>
                         <th>Description</th>
                         <th>&nbsp;</th>
                         <th>&nbsp;</th>
                     </tr>
                 </thead>
+                <tbody><tr></tr></tbody>
                 </table>
             </div>
         </section>
-
           <script src="/js/libs/jquery.min.js"></script>
           <script src="/js/libs/foundation.min.js"></script>
           <script src="/js/libs/fabmo.js"></script>
-          <script src="./js/libs/jquery.dataTables.min.js"></script>
-          <script src="./js/libs/dataTables.foundation.js"></script>
-          <script src="./js/libs/moment.js"></script>
-
           <script type="text/javascript">
             var fabmo = new FabMoDashboard();
-            $.fn.selectText = function () {
-                var range, selection;
-                var node = this.get(0);
-                if (window.getSelection) {
-                  selection = window.getSelection();
-                  range = document.createRange();
-                  range.selectNodeContents(node);
-                  selection.removeAllRanges();
-                  selection.addRange(range);
-                } else if (document.body.createTextRange) {
-                  range = document.body.createTextRange();
-                  range.moveToElementText(node);
-                  range.select();
-                }
-            };
+          </script>
+          <script src="./js/macro_manager.js"></script>
 
-          $(document).ready(function() {
-
-            //Foundation Init
-            $(document).foundation();
-            
-            var col_idx = [null, 'index', 'name', 'description', null, null];
-
-            var macro_table = $('#macro_table').DataTable( {
-                "filter": false,
-                "paging": false,
-                "processing": false,
-                "bInfo": false,
-                "bLengthChange":false,
-                "ajax": {
-                    "url" : "/macros",
-                    "dataSrc" : function(json) { 
-                        return json.data.macros; }
-                    },
-                "columns": [
-                    {
-                        "className":      'run-control',
-                        "orderable":      false,
-                        "data":           null,
-                        "defaultContent": '<img class="svg" src="css/images/play_icon.png">',
-                    },
-                    {
-                        data : "index",
-                        defaultContent : '',
-                        className : 'noselect editable'                        
-                    },
-                    {
-                        data : "name", 
-                        defaultContent : '', 
-                        className : 'noselect editable'
-                    },
-                    {
-                        data : "description", 
-                        defaultContent : '',
-                        className : 'noselect editable'
-                    },
-                    {
-                        "className":      'edit-control',
-                        "orderable":      false,
-                        "data":           null,
-                        "defaultContent": '<img class="svg" src="css/images/edit_icon.png">',                
-                    },
-                    {
-                        "className":      'delete-control',
-                        "orderable":      false,
-                        "data":           null,
-                        "defaultContent": '<img class="svg" src="css/images/recycling10.svg">',                
-                    }
-                ],
-                "order" : [[1,"asc"]]
-            }); // DataTable
-
-
-            $('#macro-new').on('click', function(evt) {
-                var indices = macro_table.columns(1).data().toArray()[0];
-                var new_idx = indices.length > 0 ? Math.max.apply(null, indices) + 1 : 1;
-                fabmo.updateMacro(new_idx, {}, function(err, result) {
-                    macro_table.ajax.reload();
-                    fabmo.notify('error', err);
-                });
-                evt.preventDefault();
-            }); 
-
-            $('#macro_table tbody').on('click', 'td', function () {
-                var td = $(this);
-                var tr = td.closest('tr');
-                var row = macro_table.row(tr);
-                var cell = macro_table.cell(td);
-                var macro = row.data();
-                var col = cell.index().column;
-                var key = col_idx[col];
-                var ids = macro_table.columns(1).data().toArray()[0];
-                var error_message = null;
-
-                if(td.hasClass('editable')) {
-                    var saved_text = td.text();
-                    td.attr('contenteditable', true);
-                    td.focus();
-                    td.selectText();
-                    
-                    function save() {
-                        var update = {};
-                        var ok_to_update = true;
-                        if(key === 'index') {
-                            try {
-                                v = parseInt(td.text())
-                                update[key] = v;
-                                if(ids.indexOf(v) != -1) {
-                                    ok_to_update = false;
-                                    error_message = "Macro number " + v + " already exists."
-                                }
-                            } catch(e) {
-                                ok_to_update = false;
-                            }
-                        } else {
-                            update[key] = td.text();
-                        }
-                        if(ok_to_update) {
-                            fabmo.updateMacro(parseInt(macro.index), update, function(err, result) {
-                                macro_table.ajax.reload();
-                            });                                    
-                        } else {
-                            td.text(saved_text);                                    
-                            if(error_message) {
-                                fabmo.notify('error', error_message);
-                            }
-                        }
-                    }
-
-                    td.on('keydown', function(evt) {
-                        switch(evt.which) {
-                            case 09:
-                            case 13: // Enter
-                                td.off('keydown'); 
-                                td.blur();
-                                evt.preventDefault();
-                                break;
-                            case 27: // Esc
-                                td.text(saved_text)
-                                td.blur();
-                                break;
-                        }
-                    });
-
-                    td.on('blur', function(evt) {
-                        td.off('blur');
-                        save();
-                    });
-
-                }
-            } );
-
-
-            $('#macro_table tbody').on( 'click', 'td', function () {
-                var tr = $(this).closest('tr');
-                var row = macro_table.row( tr );
-                var cell = macro_table.cell( this );
-                var macro = row.data();
-                switch(cell.index().column) {
-                    case 0:
-                        fabmo.runMacro(macro.index)
-                        break;
-                    case 4:
-                        fabmo.launchApp('editor', {'macro' : macro.index});
-                        break;
-                    case 5:
-                        fabmo.deleteMacro(macro.index, function(err) {
-                            macro_table.ajax.reload();
-                        });
-                        break;
-                    default:
-                        break;
-                }
-            } );
-
-        });
-        </script>
     </body>
 </html>
