--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -280,6 +280,12 @@
           "Cmd-Enter": function(cm) {
             execute();
           },
+          "Ctrl-Enter": function(cm) {
+            execute();
+          },
+          "Ctrl-s": function(cm) {
+            save();
+          },
           "Cmd-s": function(cm) {
             save();
           }
