Further tweaks to macro manager

--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -36,7 +36,7 @@
                         <th>&nbsp;</th>
                     </tr>
                 </thead>
-                <tbody><tr></tr></tbody>
+                <tbody id="macro_table_body"></tbody>
                 </table>
             </div>
         </section>
