Work on "Raw" unit values

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1108,7 +1108,7 @@
             <div class="row collapse">
               <label>Unit Value</label>
               <div class="small-9 columns">
-                <input type="text" id="opensbp-units1" class="opensbp-values"/>
+                <input type="text" id="driver-1su" class="driver-input"/>
               </div>
               <div class="small-3 columns">
                 <span class="postfix">steps/units</span>
@@ -1178,7 +1178,7 @@
             <div class="row collapse">
               <label>Unit Value</label>
               <div class="small-9 columns">
-                <input type="text" id="opensbp-units2" class="opensbp-values"/>
+                <input type="text" id="driver-2su" class="driver-input"/>
               </div>
               <div class="small-3 columns">
                 <span class="postfix">steps/units</span>
@@ -1248,7 +1248,7 @@
             <div class="row collapse">
               <label>Unit Value</label>
               <div class="small-9 columns">
-                <input type="text" id="opensbp-units3" class="opensbp-values"/>
+                <input type="text" id="driver-3su" class="driver-input"/>
               </div>
               <div class="small-3 columns">
                 <span class="postfix">steps/units</span>
@@ -1318,7 +1318,7 @@
             <div class="row collapse">
               <label>Unit Value</label>
               <div class="small-9 columns">
-                <input type="text" id="opensbp-units4" class="opensbp-values"/>
+                <input type="text" id="driver-4su" class="driver-input"/>
               </div>
               <div class="small-3 columns">
                 <span class="postfix">steps/units</span>
@@ -1388,7 +1388,7 @@
             <div class="row collapse">
               <label>Unit Value</label>
               <div class="small-9 columns">
-                <input type="text" id="opensbp-units5" class="opensbp-values"/>
+                <input type="text" id="driver-5su" class="driver-input"/>
               </div>
               <div class="small-3 columns">
                 <span class="postfix">steps/units</span>
@@ -1459,7 +1459,7 @@
             <div class="row collapse">
               <label>Unit Value</label>
               <div class="small-9 columns">
-                <input type="text" id="opensbp-units6" class="opensbp-values"/>
+                <input type="text" id="driver-6su" class="driver-input"/>
               </div>
               <div class="small-3 columns">
                 <span class="postfix">steps/units</span>
