--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <title>G-Code Editor</title>
+  <title>Configuration</title>
   <meta charset="utf-8"/>
-  
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/foundation.min.css">
   <link rel="stylesheet" href="./css/font-awesome.min.css">
@@ -11,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="/js/libs/jquery.min.js"></script>
   <script src="/js/libs/foundation.min.js"></script>
-
 </head>
 <body style="background-color: #ffffff;">
 <div class="sticky">
@@ -50,15 +48,15 @@
     <div class="row">
       <fieldset>
         <legend>General Settings</legend>
-        <div class="large-4 columns">
+        <div class="large-4 columns" id="section-machine-name">
           <div class="row collapse">
             <label>Machine Name</label>
             <div class="small-12 columns">
-              <input type="text" id="input-name" class="input"/>
+              <input type="text" id="input-machine-name" class="input"/>
             </div>
           </div>
         </div>
-        <div class="large-4 columns">
+        <div class="large-4 columns" id="section-machine-id">
           <div class="row collapse">
             <label>Machine ID</label>
             <div class="small-12 columns">
